istio-demo/05-application-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-deployment-2
  namespace: istio-demo
  labels:
    k8s-app: ws-deployment-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webservice
      k8s-app: ws-deployment
      version: v2
  template:
    metadata:
      labels:
        app: webservice
        k8s-app: ws-deployment
        version: v2
    spec:
      containers:
      - name: webservice
        image: eu.gcr.io/sandbox-training-225413/webservice:v0.0.2
        ports:
        - containerPort: 8080
          name: rest-api-ws
        resources:
          limits:
            memory: "40Mi"
            cpu: "20m"
          requests:
            memory: "40Mi"
            cpu: "20m"
        # livenessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 8080
        # readinessProbe:
        #   httpGet:
        #     path: /ready
        #     port: 8080
