istio-demo/02-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-deployment
  namespace: istio-demo
  labels:
    k8s-app: ws-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webservice
      k8s-app: ws-deployment
      version: v1
  template:
    metadata:
      labels:
        app: webservice
        k8s-app: ws-deployment
        version: v1
    spec:
      containers:
      - name: webservice
        image: eu.gcr.io/sandbox-wescale/webservice:v5
        ports:
        - containerPort: 8080
          name: rest-api-ws
        resources:
          limits:
            memory: "40Mi"
            cpu: "20m"
          requests:
            memory: "40Mi"
            cpu: "20m"
---
apiVersion: v1
kind: Service
metadata:
  name: ws-service
  namespace: istio-demo
  labels:
    app: webservice
    k8s-app: ws-deployment
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: rest-api-ws
  selector:
    app: webservice
    k8s-app: ws-deployment
  type: ClusterIP
