istio-demo/04-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ws-virtualservice
  namespace: istio-demo
spec:
  hosts:
  - "*"
  gateways:
  - ws-gateway
  http:
  - route:
    - destination:
        host: ws-service
