istio-demo/07-virtualservice-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ws-virtualservice
  namespace: istio-demo
spec:
  hosts:
  - "*"
  gateways:
  - ws-gateway
  http:
  - route:
    - destination:
        host: ws-service
        subset: v2
      weight: 10
    - destination:
        host: ws-service
        subset: v1
      weight: 90
