istio-demo/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ws-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - ws-gateway
  http:
  - route:
    - destination:
        host: ws-service
